# LLama.android

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  TalkItemAudio.qml  TalkItemBase.qml  TalkLabel.qml  TalkList.pro  TalkListModel.h  TalkListView.qml  img.qrc  main.qml  prompt.json
LLM/: README.md  download_community.sh
android/: AndroidManifest.xml
scripts/pythonTestAPI/: main.py
src/: ChatRequest.cpp  ChatRequest.h  TalkListDefine.cpp  TalkListDefine.h  TalkListModel.cpp  TalkListModel.h  main.cpp  resource.qrc
src/qml/: TalkItemAudio.qml  TalkItemBase.qml  TalkItemText.qml  TalkLabel.qml  TalkListView.qml  main.qml
